# cpp_base

./: .clang-format  .gitlab-ci.yml  .gitmodules  .testenv-beta-ci.yml  .testenv-ci.yml  CMakeLists.txt  LECTURES.md  README.md  SCORE.md  SETUP.md  build.docker  run-clang-format.py  run_linter.sh  testenv.docker
cmake/: FindCatch.cmake
deadlines/: ead.yml  pmi.yml
lectures/: lecture5.cpp
tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: .tester.json  CMakeLists.txt  cow_string.cpp  cow_string.h  readme.md  test.cpp
tasks/image_processor/: CMakeLists.txt  Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  GrayScale.cpp  GrayScale.h  Jitter.cpp  Jitter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h  base_filters.cpp  base_filters.h  bmp.cpp  bmp.h  bmp_headers.h  enquiry.cpp  filters_factory.cpp  filters_factory.h  image_processor.cpp  image_processor.h  parser.cpp  parser.h  processor.cpp  processor.h  reader.cpp  reader.h  readme.md  writer.cpp  writer.h
tasks/mines/: CMakeLists.txt  minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp  readme.md
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: .tester.json  CMakeLists.txt  poly.cpp  poly.h  readme.md  test.cpp
tasks/robot/: .tester.json  CMakeLists.txt  checkers_topology.cpp  checkers_topology.h  knight_topology.cpp  knight_topology.h  overflow_topology.cpp  overflow_topology.h  planar_topology.cpp  planar_topology.h  point.h  readme.md  robot.cpp  robot.h  test.cpp  topology.cpp  topology.h  world.cpp  world.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/search/: search.cpp
tasks/search2/: search.cpp  search.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: similar.cpp  unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: test.cpp  (+4 more)
